--- a/dialog.ui
+++ b/dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>507</width>
+    <width>660</width>
     <height>446</height>
    </rect>
   </property>
@@ -15,120 +15,176 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_5">
+    <widget class="QFrame" name="frame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>0</number>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <item>
+         <widget class="QRadioButton" name="radioButtonNative">
+          <property name="text">
+           <string>&amp;Native git/gpg</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioButtonPass">
+          <property name="text">
+           <string>&amp;Use pass</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
-      <widget class="QRadioButton" name="radioButtonNative">
-       <property name="text">
-        <string>&amp;Native git/gpg</string>
+      <widget class="QGroupBox" name="groupBoxNative">
+       <property name="title">
+        <string>Native</string>
        </property>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="labelGitPath">
+          <property name="text">
+           <string>Executable git</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="gpgPath"/>
+        </item>
+        <item row="0" column="2">
+         <widget class="QToolButton" name="toolButtonGit">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="labelGpgPath">
+          <property name="text">
+           <string>Executable gpg</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QToolButton" name="toolButtonGpg">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="gitPath"/>
+        </item>
+       </layout>
       </widget>
      </item>
      <item>
-      <widget class="QRadioButton" name="radioButtonPass">
-       <property name="text">
-        <string>&amp;Use pass</string>
+      <widget class="QGroupBox" name="groupBoxPass">
+       <property name="title">
+        <string>Pass</string>
        </property>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="2">
+         <widget class="QToolButton" name="toolButtonPass">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="labelPassPath">
+          <property name="text">
+           <string>Executable pass</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="passPath"/>
+        </item>
+       </layout>
       </widget>
      </item>
     </layout>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBoxNative">
+    <widget class="QGroupBox" name="groupBoxProfiles">
      <property name="title">
-      <string>Native</string>
+      <string>Profiles</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="gpgPath"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="gitPath"/>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="labelGitPath">
-        <property name="text">
-         <string>Executable git</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="labelGpgPath">
-        <property name="text">
-         <string>Executable gpg</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QToolButton" name="toolButtonGpg">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QToolButton" name="toolButtonGit">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="groupBoxPass">
-     <property name="title">
-      <string>Pass</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="2">
-       <widget class="QToolButton" name="toolButtonPass">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="labelPassPath">
-        <property name="text">
-         <string>Executable pass</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="passPath"/>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
-      <string>Other</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_6">
-      <item row="0" column="0">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
        <layout class="QGridLayout" name="gridLayout_5">
-        <item row="0" column="0">
-         <widget class="QLabel" name="labelStorePath">
-          <property name="text">
-           <string>Folder password-store</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
+        <item row="1" column="3">
          <widget class="QLineEdit" name="storePath"/>
         </item>
-        <item row="0" column="2">
+        <item row="1" column="4">
          <widget class="QToolButton" name="toolButtonStore">
           <property name="text">
            <string>...</string>
           </property>
          </widget>
         </item>
+        <item row="1" column="2">
+         <widget class="QLabel" name="labelStorePath">
+          <property name="text">
+           <string>Folder password-store</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="profileName"/>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="labelName">
+          <property name="text">
+           <string>Profile name</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
-      <item row="1" column="0">
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBoxOther">
+     <property name="title">
+      <string>Other</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_6">
+      <item row="0" column="0">
        <layout class="QGridLayout" name="gridLayout_7">
         <item row="0" column="0">
          <widget class="QCheckBox" name="checkBoxClipboard">
