--- a/dialog.ui
+++ b/dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>491</width>
-    <height>585</height>
+    <height>501</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,70 +33,83 @@
     </layout>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBoxNative">
-     <property name="title">
-      <string>Native</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="labelGpgPath">
-        <property name="text">
-         <string>gpg</string>
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QGroupBox" name="groupBoxNative">
+        <property name="title">
+         <string>Native</string>
         </property>
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="0">
+          <widget class="QLabel" name="labelGpgPath">
+           <property name="text">
+            <string>gpg</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2">
+          <widget class="QToolButton" name="toolButtonGit">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="labelGitPath">
+           <property name="text">
+            <string>git</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="gitPath"/>
+         </item>
+         <item row="0" column="2">
+          <widget class="QToolButton" name="toolButtonGpg">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="gpgPath"/>
+         </item>
+        </layout>
        </widget>
       </item>
-      <item row="1" column="2">
-       <widget class="QToolButton" name="toolButtonGit">
-        <property name="text">
-         <string>...</string>
+      <item>
+       <widget class="QGroupBox" name="groupBoxPass">
+        <property name="title">
+         <string>Pass</string>
         </property>
+        <layout class="QGridLayout" name="gridLayout_2">
+         <item row="0" column="2">
+          <widget class="QToolButton" name="toolButtonPass">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="labelPassPath">
+           <property name="text">
+            <string>pass</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="passPath"/>
+         </item>
+         <item row="1" column="0" colspan="3">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;http://www.passwordstore.org/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;www.passwordstore.org&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="labelGitPath">
-        <property name="text">
-         <string>git</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="gitPath"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="gpgPath"/>
-      </item>
-      <item row="0" column="2">
-       <widget class="QToolButton" name="toolButtonGpg">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="groupBoxPass">
-     <property name="title">
-      <string>Pass</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="2">
-       <widget class="QToolButton" name="toolButtonPass">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="labelPassPath">
-        <property name="text">
-         <string>pass</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="passPath"/>
       </item>
      </layout>
     </widget>
